--- a/views/index.html
+++ b/views/index.html
@@ -26,7 +26,7 @@
 	</style> 
 	<script type="application/javascript" src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 	<script type="application/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-   	<script type="application/javascript" src="https://code.angularjs.org/1.2.1/angular.js"></script>
+   	<script type="application/javascript" src="javascripts/angular.js"></script>
    	<script type="application/javascript" src="/controllers/app.js"></script>
   </head>
   <body>
