--- a/views/index.html
+++ b/views/index.html
@@ -28,6 +28,8 @@
     <body>
 		<script type="application/javascript" src="//code.jquery.com/jquery-2.1.1.min.js"></script>
 		<script type="application/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+		<script type="application/javascript" src="//code.angularjs.org/1.2.25/angular.js"></script>
+		<script type="application/javascript" src="//code.angularjs.org/1.2.25/angular-route.js"></script>
 		<div class="container" ng-controller="ContainerController as containerCtrl">
 			<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 				<div class="container">
@@ -248,7 +250,6 @@
 				</div>
 			</nav>
 		</div>
-	   	<script type="application/javascript" src="//code.angularjs.org/1.2.25/angular.js"></script>
 	   	<script type="application/javascript" src="/controllers/app.js"></script>
 		<script type="application/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 		<script type="application/javascript" src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.0/highlight.min.js"></script>
