--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html ng-app="gallery" ng-controller="ItemController as itemCtrl" ng-init="init()"> 
     <head>
+		<script type="application/javascript" src="//code.jquery.com/jquery-2.1.1.min.js"></script>
+		<script type="application/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+		<script type="application/javascript" src="//code.angularjs.org/1.2.25/angular.js"></script>
+	   	<script type="application/javascript" src="/controllers/app.js"></script>
 	    <link rel="stylesheet" type="text/css" href="../stylesheets/bootstrap.css" />
 		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"> 
 		<link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
@@ -25,11 +29,7 @@
 			}
 		</style> 
     </head>
-    <body>
-		<script type="application/javascript" src="//code.jquery.com/jquery-2.1.1.min.js"></script>
-		<script type="application/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-		<script type="application/javascript" src="//code.angularjs.org/1.2.25/angular.js"></script>
-		<script type="application/javascript" src="//code.angularjs.org/1.2.25/angular-route.js"></script>
+    <body nowrap>
 		<div class="container" ng-controller="ContainerController as containerCtrl">
 			<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 				<div class="container">
@@ -250,7 +250,6 @@
 				</div>
 			</nav>
 		</div>
-	   	<script type="application/javascript" src="/controllers/app.js"></script>
 		<script type="application/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 		<script type="application/javascript" src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.0/highlight.min.js"></script>
 		<script type="application/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.3.7/slick.min.js"></script>
