--- a/views/index.html
+++ b/views/index.html
@@ -72,7 +72,7 @@
 					<div class="col-xs-6 col-md-3" ng-repeat="item in itemCtrl.items">
 						<div class="thumbnail">
 							<a ng-click="itemCtrl.getItem(item.name); containerCtrl.selectTab(1)">
-								<img style="min-width : 100px; min-height : 100px; max-width : 100px; max-height : 100px" data-ng-src='https://gallerie.blob.core.windows.net/images/{{item.file}}.jpg'/>
+								<img style="min-width : 100px; min-height : 100px; max-width : 100px; max-height : 100px" data-ng-src='https://gallerie.blob.core.windows.net/images/{{item.file}}.jpg' onerror="this.src='/img/no-img.jpg'"/>
 							</a>
 							<div class="caption">
 								<p>{{item.name}}</p>
@@ -98,7 +98,7 @@
 							<h3> {{item.name}} </h3>	
 						</div>
 						<div class="panel-body">
-							<img width='20%' align='left' style='margin-right:10px' ng-src='https://gallerie.blob.core.windows.net/images/{{item.file}}.jpg'/>					
+							<img width='20%' align='left' style='margin-right:10px' ng-src='https://gallerie.blob.core.windows.net/images/{{item.file}}.jpg' onerror="this.src='/img/no-img.jpg'"/>					
 							<p>{{item.description}}</p>
 							<p>
 								<div class="thumbButton2" name="{{item.link}}"></div>
