--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,7 @@
 		<script type="application/javascript" src="//code.angularjs.org/1.2.25/angular.js"></script>
 	   	<script type="application/javascript" src="/controllers/app.js"></script>
 	    <link rel="stylesheet" type="text/css" href="../stylesheets/bootstrap.css" />
-		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"> 
+		<link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"> 
 		<link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.3.7/slick.css"/>
 		<style type="text/css">
@@ -68,7 +68,7 @@
 				</div>
 			</div>
 			<div class="container">				
-				<div class="row" ng-show="containerCtrl.isSelected(0)">		
+				<div class="row" ng-show="containerCtrl.isSelected(0)" ng-cloak>		
 					<div class="col-xs-6 col-md-3" ng-repeat="item in itemCtrl.items">
 						<div class="thumbnail">
 							<a ng-click="itemCtrl.getItem(item.name); containerCtrl.selectTab(1)">
@@ -92,7 +92,7 @@
 					</script>
 				</div>	
 				
-				<div class="row" ng-show="containerCtrl.isSelected(1)">
+				<div class="row" ng-show="containerCtrl.isSelected(1)" ng-cloak>
 					<div class="panel panel-default" ng-repeat="item in itemCtrl.items">
 						<div class="panel-heading">
 							<h3> {{item.name}} </h3>	
@@ -208,7 +208,7 @@
 				    <!-- Jssor Slider End -->	
 				</div>	
 				
-				<div class="row" ng-show="containerCtrl.isSelected(2)">
+				<div class="row" ng-show="containerCtrl.isSelected(2)" ng-cloak>
 					<h1>Add a product</h1>
 					<div class="col-sm-6 col-md-4 col-md-offset-4 border-top-radius">
 						<form method="POST" enctype="multipart/form-data" action="/addProduct">
