--- a/views/index.html
+++ b/views/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html ng-app="gallery" ng-controller="ItemController as itemCtrl" ng-init="init()"> 
     <head>
-    	<script type="application/javascript" src="//code.jquery.com/jquery-2.1.1.min.js"></script>
-		<script type="application/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-		<script type="application/javascript" src="//code.angularjs.org/1.2.25/angular.js"></script>
-	   	<script type="application/javascript" src="/controllers/app.js"></script>
-	    <link rel="stylesheet" type="text/css" href="../stylesheets/bootstrap.css" />
+    	 <link rel="stylesheet" type="text/css" href="../stylesheets/bootstrap.css" />
 		<link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"> 
 		<link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.3.7/slick.css"/>
+    	<script type="application/javascript" src="//code.jquery.com/jquery-2.1.1.min.js"></script>
+		<script type="application/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+		<script type="application/javascript" src="//code.angularjs.org/1.2.25/angular.min.js"></script>
+	   	<script type="application/javascript" src="/controllers/app.js"></script>  
 		<style type="text/css">
 			h2{
 				margin: 0;     
@@ -255,7 +255,6 @@
 		<script type="application/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.3.7/slick.min.js"></script>
 		<script type="application/javascript" src="/javascripts/scripts.js"></script>
 		<script type="application/javascript" src="/javascripts/bootstrap.file-input.js"></script>
-		<script type="application/javascript" src="/javascripts/jquery.elevatezoom.js"></script>
 		<script type="application/javascript" src="/javascripts/jssor.core.js"></script>
 	    <script type="application/javascript" src="/javascripts/jssor.utils.js"></script>
 	    <script type="application/javascript" src="/javascripts/jssor.slider.js"></script>
