--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,7 @@
     	<script type="application/javascript" src="//code.jquery.com/jquery-2.1.1.min.js"></script>
 		<script type="application/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 		<script type="application/javascript" src="//code.angularjs.org/1.2.25/angular.min.js"></script>
+		<script type="application/javascript" src="//code.angularjs.org/1.2.25/angular-route.min.js"></script>
 	   	<script type="application/javascript" src="/controllers/app.js"></script>  
 		<style type="text/css">
 			h2{
