--- a/views/index.html
+++ b/views/index.html
@@ -7,8 +7,8 @@
 		<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.3.7/slick.css"/>
 		<script type="application/javascript" src="//code.jquery.com/jquery-2.1.1.min.js"></script>
 		<script type="application/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-		<script type="application/javascript" src="//code.angularjs.org/1.2.25/angular.js"></script>
-		<script type="application/javascript" src="//code.angularjs.org/1.2.25/angular-route.js"></script>
+		<script type="application/javascript" src="//code.angularjs.org/1.2.25/angular.min.js"></script>
+		<script type="application/javascript" src="//code.angularjs.org/1.2.25/angular-route.min.js"></script>
 	   	<script type="application/javascript" src="/controllers/app.js"></script>  
 		<style type="text/css">
 			h2{
