--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="gallery" ng-controller="ItemController as itemCtrl" ng-init="init()"> 
+<html ng-controller="ItemController as itemCtrl" ng-init="init()"> 
     <head> 	
     	<link rel="stylesheet" type="text/css" href="../stylesheets/bootstrap.css" />
 		<link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"> 
@@ -7,8 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.3.7/slick.css"/>
 		<script type="application/javascript" src="//code.jquery.com/jquery-2.1.1.min.js"></script>
 		<script type="application/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-		<script type="application/javascript" src="//code.angularjs.org/1.2.25/angular.min.js"></script>
-		<script type="application/javascript" src="//code.angularjs.org/1.2.25/angular-route.min.js"></script>	   	
+		<script type="application/javascript" src="//code.angularjs.org/1.2.25/angular.min.js"></script>	
 		<style type="text/css">
 			h2{
 				margin: 0;     
