--- a/views/index.html
+++ b/views/index.html
@@ -53,16 +53,11 @@
 								<a href="#activities" ng-click="itemCtrl.getItems('Activities'); panel.selectTab(4); containerCtrl.selectTab(0)">Activities</a>
 							</li>
 						</ul>
-						<script>
-							var referrer = document.referrer;
-							if (referrer.length > 0){
-								document.write('<ul class="nav navbar-nav navbar-right"><li><a id="addproduct" ng-click="containerCtrl.selectTab(2)">Add a product</a></li></ul>');
-							}
-							else{
-								//A enlever après test
-								document.write('<ul class="nav navbar-nav navbar-right"><li><a id="addproduct" ng-click="containerCtrl.selectTab(2)">Add a product</a></li></ul>');	
-							} 
-						</script>
+						<ul class="nav navbar-nav navbar-right">
+							<li>
+								<a id="addproduct" ng-click="containerCtrl.selectTab(2)" ng-show="false">Add a product</a>
+							</li>
+						</ul>
 					</div>
 				</div>
 			</div>
@@ -249,6 +244,15 @@
 				</div>
 			</nav>
 		</div>
+		<script>
+			$(function(){				
+				$.getJSON( "http://www.telize.com/jsonip", function(data){
+					if(data.ip == '193.30.141.1' || data.ip == '193.30.141.2'){
+						$('#addproduct').attr('class','ng-show');
+					}
+				});
+			});
+		  </script>
 		<script type="application/javascript" src="/controllers/app.js"></script>  
 		<script type="application/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 		<script type="application/javascript" src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.0/highlight.min.js"></script>
