--- a/views/index.html
+++ b/views/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
-<html ng-controller="ItemController as itemCtrl"> 
+<html ngng-controller="ItemController as itemCtrl"> 
     <head>
    		<link rel="stylesheet" type="text/css" href="../stylesheets/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"> 
-		<link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-		<script type="application/javascript" src="//code.jquery.com/jquery-2.1.1.min.js"></script>
-		<script type="application/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-		<script type="application/javascript" src="//code.angularjs.org/1.2.25/angular.min.js"></script>	
-		<script type="application/javascript" src="/controllers/app.js"></script>  
+		<link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">		
 		<style type="text/css">
 			h2{
 				margin: 0;     
@@ -249,6 +245,10 @@
 				</div>
 			</nav>
 		</div>
+		<script type="application/javascript" src="//code.jquery.com/jquery-2.1.1.min.js"></script>
+		<script type="application/javascript" src="//code.angularjs.org/1.2.25/angular.min.js"></script>
+		<script type="application/javascript" src="/controllers/app.js"></script> 
+		<script type="application/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 		<script>
 			$(function(){				
 				$.getJSON( "http://www.telize.com/jsonip", function(data){
