--- a/views/index.html
+++ b/views/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html ngng-controller="ItemController as itemCtrl"> 
-    <head>
-   		<link rel="stylesheet" type="text/css" href="../stylesheets/bootstrap.css">
-		<link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"> 
-		<link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">		
-		<script type="application/javascript" src="//code.jquery.com/jquery-2.1.1.min.js"></script>
+<html ng-controller="ItemController as itemCtrl" ng-init="init()"> 
+    <head> 	
+    	<script type="application/javascript" src="//code.jquery.com/jquery-2.1.1.min.js"></script>
+		<script type="application/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 		<script type="application/javascript" src="//code.angularjs.org/1.2.25/angular.min.js"></script>
-		<script type="application/javascript" src="/controllers/app.js"></script> 
+    	<link rel="stylesheet" type="text/css" href="../stylesheets/bootstrap.css" />
+		<link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"> 
+		<link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">			
 		<style type="text/css">
 			h2{
 				margin: 0;     
@@ -27,7 +27,7 @@
 			}
 		</style> 
     </head>
-    <body>
+    <body nowrap>
 		<div class="container" ng-controller="ContainerController as containerCtrl">
 			<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 				<div class="container">
@@ -54,6 +54,12 @@
 						</ul>
 						<ul class="nav navbar-nav navbar-right">
 							<li class="addProduct">
+								<script>
+									var referrer = document.referrer;
+									if (referrer.length == 0){
+										$(".addProduct").append('<a id="addproduct" ng-click="containerCtrl.selectTab(2)" ng-show="false">Add a product</a>');
+									}
+								</script>
 							</li>
 						</ul>
 					</div>
@@ -74,6 +80,14 @@
 							</div>
 						</div>
 					</div>
+					<script>
+						referrer = document.referrer;
+						if (referrer.length == 0){
+							$(".thumbButton").each(function(){$(this).append('<a name="download" class="btn btn-xs btn-success" href="/product/download?' + $(this).attr("name") + '">download this item</a>')}); 								
+						} else {
+							$(".thumbButton").each(function(){$(this).append('<a name="install" class="btn btn-xs btn-danger" href="/product/install?' + $(this).attr("name") + '">install this item</a>')});	
+						}
+					</script>
 				</div>	
 				
 				<div class="row" ng-show="containerCtrl.isSelected(1)" ng-cloak>
@@ -89,6 +103,13 @@
 							</p>
 						</div>
 					</div>	
+					<script>
+						if (referrer.length == 0){
+							$(".thumbButton2").each(function(){$(this).append('<a name="download" class="btn btn-xs btn-success" href="/product/download?' + $(this).attr("name") + '">download this item</a>')}); 									
+						} else {
+							$(".thumbButton2").each(function(){$(this).append('<a name="install" class="btn btn-xs btn-danger" href="/product/install?' + $(this).attr("name") + '">install this item</a>')});	
+						}
+					</script>
 					<div class="col-sm-6 col-md-5 col-md-offset-3 border-top-radius">
 						<div id="slider2_container" style="position: relative; top: 0px; left: 0px; width: 150px; height: 100px; overflow: hidden; ">
 					        <!-- Slides Container -->
@@ -221,8 +242,12 @@
 					</div>
 				</div>
 			</div>
+			<nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
+				<div class="container">
+					
+				</div>
+			</nav>
 		</div>
-		<script type="application/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 		<script>
 			$(function(){				
 				$.getJSON( "http://www.telize.com/jsonip", function(data){
@@ -231,24 +256,9 @@
 					}
 				});
 			});
-
-			var referrer = document.referrer;
-			if (referrer.length == 0){
-				$(".addProduct").append('<a id="addproduct" ng-click="containerCtrl.selectTab(2)" ng-show="false">Add a product</a>');
-			}
-
-			if (referrer.length == 0){
-				$(".thumbButton2").each(function(){$(this).append('<a name="download" class="btn btn-xs btn-success" href="/product/download?' + $(this).attr("name") + '">download this item</a>')}); 									
-			} else {
-				$(".thumbButton2").each(function(){$(this).append('<a name="install" class="btn btn-xs btn-danger" href="/product/install?' + $(this).attr("name") + '">install this item</a>')});	
-			}
-
-			if (referrer.length == 0){
-				$(".thumbButton").each(function(){$(this).append('<a name="download" class="btn btn-xs btn-success" href="/product/download?' + $(this).attr("name") + '">download this item</a>')}); 								
-			} else {
-				$(".thumbButton").each(function(){$(this).append('<a name="install" class="btn btn-xs btn-danger" href="/product/install?' + $(this).attr("name") + '">install this item</a>')});	
-			}
-		</script>
+		  </script>
+		<script type="application/javascript" src="/controllers/app.js"></script>  
+		<script type="application/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 		<script type="application/javascript" src="/javascripts/bootstrap.file-input.js"></script>
 		<script type="application/javascript" src="/javascripts/jssor.core.js"></script>
 	    <script type="application/javascript" src="/javascripts/jssor.utils.js"></script>
