--- a/views/index.html
+++ b/views/index.html
@@ -69,6 +69,7 @@
 							<div class="caption">
 								<p>{{item.name}}</p>
 								<p>
+									<a name="install" class="btn btn-xs btn-danger" href="/product/install?{{item.link}}">install this item</a>
 									<div class="thumbButton" id="thumbButton" name="{{item.link}}"></div>
 								</p>
 							</div>
