--- a/views/index.html
+++ b/views/index.html
@@ -2,8 +2,8 @@
 <html ng-controller="ItemController as itemCtrl" ng-init="init()"> 
     <head> 	
     	<link rel="stylesheet" type="text/css" href="../stylesheets/bootstrap.css" />
-		<link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"> 
-		<link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">	
+		<link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"> 
+		<link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">	
 		<script type="application/javascript" src="//code.jquery.com/jquery-2.1.1.min.js"></script>
 		<script type="application/javascript" src="//code.angularjs.org/1.2.25/angular.min.js"></script>		
 		<style type="text/css">
