--- a/views/index.html
+++ b/views/index.html
@@ -226,8 +226,68 @@
 				</div>
 			</nav>
 		</div>
-		<script type="application/javascript" src="/controllers/app.js"></script>  
 		<script>
+			(function(){
+				var app = angular.module('gallery',[]);
+
+				app.controller('ContainerController', function(){
+					this.tab = 0;		
+					
+					this.selectTab = function(setTab){
+						this.tab = setTab;
+					}
+					
+					this.isSelected = function(checkTab){
+						return this.tab == checkTab;
+					}
+				});
+				
+				app.controller('ItemController',['$scope', '$http', function($scope, $http){	  
+					this.items = [];	
+					this.init = function(){
+						var ctrl = this;
+						ctrl.items = [];
+						$http.get('/getPackageJSON').success(function(data){
+							ctrl.items = data;
+						});
+					};
+
+					this.init();
+						
+					this.getItems = function(category){
+						var ctrl = this;
+						ctrl.items = [];
+						$http.get('/getPackageJSON').success(function(data){
+							if (category == 'All'){
+								ctrl.items = data;
+							}
+							else{
+								for(var index = 0; index < data.length; index++){
+									var item = data[index];
+									if(item.category == category){
+										ctrl.items.push(item);											
+									}
+								}
+							}
+						});
+					};
+					
+					this.getItem = function(name){
+						var ctrl = this;
+						ctrl.items = [];
+						$http.get('/getPackageJSON').success(function(data){
+							for(var index = 0; index < data.length; index++){
+								var item = data[index];
+								if(item.name == name){
+									ctrl.items.push(item);
+								}
+							}
+						});	
+					};
+				}]);
+				angular.bootstrap(document,['gallery']);
+			})();
+			
 			var referrer = document.referrer;
 			if (referrer.length == 0){
 				$(".addProduct").append('<a id="addproduct" ng-click="containerCtrl.selectTab(2)" ng-show="false">Add a product</a>');
@@ -252,7 +312,7 @@
 					}
 				});
 			});
-		  </script>		
+		</script>		
 		<script type="application/javascript" src="/javascripts/bootstrap.file-input.js"></script>
 		<script type="application/javascript" src="/javascripts/jssor.core.js"></script>
 	    <script type="application/javascript" src="/javascripts/jssor.utils.js"></script>
