--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"> 
 		<link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">	
 		<script type="application/javascript" src="//code.jquery.com/jquery-2.1.1.min.js"></script>
-		<script type="application/javascript" src="//code.angularjs.org/1.2.25/angular.min.js"></script>		
+		<script type="application/javascript" src="//code.angularjs.org/1.2.25/angular.js"></script>		
 		<style type="text/css">
 			h2{
 				margin: 0;     
@@ -251,7 +251,7 @@
 					}
 				});
 			});
-			
+
 			(function(){
 				var app = angular.module('gallery',[]);
 
