--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-controller="ItemController as itemCtrl" ng-init="init()"> 
     <head> 	
-    	<link rel="stylesheet" type="text/css" href="../stylesheets/bootstrap.css" />
+    	<link rel="stylesheet" type="text/css" href="/gallery/stylesheets/bootstrap.css" />
 		<link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"> 
 		<link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">	
 		<script type="application/javascript" src="//code.jquery.com/jquery-2.1.1.min.js"></script>
@@ -63,7 +63,7 @@
 					<div class="col-xs-6 col-md-3" ng-repeat="item in items" ng-hide="(category != '') && (item.category != category)">
 						<div class="thumbnail">
 							<a ng-click="itemCtrl.setItem(item.name); containerCtrl.selectTab(1)">
-								<img style="min-width : 100px; min-height : 100px; max-width : 100px; max-height : 100px" data-ng-src='https://gallerie.blob.core.windows.net/images/{{item.file}}.jpg' onerror="this.src='/img/no-img.jpg'"/>
+								<img style="min-width : 100px; min-height : 100px; max-width : 100px; max-height : 100px" data-ng-src='https://gallerie.blob.core.windows.net/images/{{item.file}}.jpg' onerror="this.src='/gallery/img/no-img.jpg'"/>
 							</a>
 							<div class="caption">
 								<p>{{item.name}}</p>
@@ -81,7 +81,7 @@
 							<h3> {{item.name}} </h3>	
 						</div>
 						<div class="panel-body">
-							<img width='20%' align='left' style='margin-right:10px' ng-src='https://gallerie.blob.core.windows.net/images/{{item.file}}.jpg' onerror="this.src='/img/no-img.jpg'"/>					
+							<img width='20%' align='left' style='margin-right:10px' ng-src='https://gallerie.blob.core.windows.net/images/{{item.file}}.jpg' onerror="this.src='/gallery/img/no-img.jpg'"/>					
 							<p>{{item.description}}</p>
 							<p>
 								<div class="thumbButton2" name="{{item.link}}"></div>
@@ -93,24 +93,24 @@
 					        <!-- Slides Container -->
 					        <div u="slides" style="position: center; width: 150px; height: 100px; overflow: hidden;">
 					            <div>
-					                <img u="image" src="/img/lazyfonz1.png" />
-					                <img u="thumb" src="/img/lazyfonz1.png" />
+					                <img u="image" src="/gallery/img/lazyfonz1.png" />
+					                <img u="thumb" src="/gallery/img/lazyfonz1.png" />
 					            </div>
 								<div>
-					                <img u="image" src="/img/lazyfonz2.png" />
-					                <img u="thumb" src="/img/lazyfonz2.png" />
+					                <img u="image" src="/gallery/img/lazyfonz2.png" />
+					                <img u="thumb" src="/gallery/img/lazyfonz2.png" />
 					            </div>
 					            <div>
-					                <img u="image" src="/img/lazyfonz3.png" />
-					                <img u="thumb" src="/img/lazyfonz3.png" />
+					                <img u="image" src="/gallery/img/lazyfonz3.png" />
+					                <img u="thumb" src="/gallery/img/lazyfonz3.png" />
 					            </div>
 					            <div>
-					                <img u="image" src="/img/lazyfonz4.png" />
-					                <img u="thumb" src="/img/lazyfonz4.png" />
+					                <img u="image" src="/gallery/img/lazyfonz4.png" />
+					                <img u="thumb" src="/gallery/img/lazyfonz4.png" />
 					            </div>
 					            <div>
-					                <img u="image" src="/img/lazyfonz5.png" />
-					                <img u="thumb" src="/img/lazyfonz5.png" />
+					                <img u="image" src="/gallery/img/lazyfonz5.png" />
+					                <img u="thumb" src="/gallery/img/lazyfonz5.png" />
 					            </div>
 					        </div>
 					        
@@ -233,15 +233,15 @@
 			}
 			
 			if (referrer.length == 0){
-				$(".thumbButton").each(function(){$(this).append('<a name="download" class="btn btn-xs btn-success" href="/product/download?' + $(this).attr("name") + '">download this item</a>')}); 							
+				$(".thumbButton").each(function(){$(this).append('<a name="download" class="btn btn-xs btn-success" href="/gallery/product/download?' + $(this).attr("name") + '">download this item</a>')}); 							
 			} else {
-				$(".thumbButton").each(function(){$(this).append('<a name="install" class="btn btn-xs btn-danger" href="/product/install?' + $(this).attr("name") + '">install this item</a>')});	
+				$(".thumbButton").each(function(){$(this).append('<a name="install" class="btn btn-xs btn-danger" href="/gallery/product/install?' + $(this).attr("name") + '">install this item</a>')});	
 			}
 
 			if (referrer.length == 0){
-				$(".thumbButton2").each(function(){$(this).append('<a name="download" class="btn btn-xs btn-success" href="/product/download?' + $(this).attr("name") + '">download this item</a>')}); 									
+				$(".thumbButton2").each(function(){$(this).append('<a name="download" class="btn btn-xs btn-success" href="/gallery/product/download?' + $(this).attr("name") + '">download this item</a>')}); 									
 			} else {
-				$(".thumbButton2").each(function(){$(this).append('<a name="install" class="btn btn-xs btn-danger" href="/product/install?' + $(this).attr("name") + '">install this item</a>')});	
+				$(".thumbButton2").each(function(){$(this).append('<a name="install" class="btn btn-xs btn-danger" href="/gallery/product/install?' + $(this).attr("name") + '">install this item</a>')});	
 			}
 
 			$(function(){				
@@ -273,7 +273,7 @@
 					$scope.items = [];
 
 					this.init = function(){
-						$http.get('/getPackageJSON').success(function(data){
+						$http.get('/gallery/getPackageJSON').success(function(data){
 						// $.get('/getPackageJSON', function(data){	
 							$scope.items = data;
 						});
@@ -296,10 +296,10 @@
 				angular.bootstrap(document,['gallery']);
 			})();
 		</script>		
-		<script type="application/javascript" src="/javascripts/bootstrap.file-input.js"></script>
-		<script type="application/javascript" src="/javascripts/jssor.core.js"></script>
-	    <script type="application/javascript" src="/javascripts/jssor.utils.js"></script>
-	    <script type="application/javascript" src="/javascripts/jssor.slider.js"></script>
-	    <script type="application/javascript" src="/javascripts/sliderConfig.js"></script>
+		<script type="application/javascript" src="/gallery/javascripts/bootstrap.file-input.js"></script>
+		<script type="application/javascript" src="/gallery/javascripts/jssor.core.js"></script>
+	    <script type="application/javascript" src="/gallery/javascripts/jssor.utils.js"></script>
+	    <script type="application/javascript" src="/gallery/javascripts/jssor.slider.js"></script>
+	    <script type="application/javascript" src="/gallery/javascripts/sliderConfig.js"></script>
     </body>
 </html>
